src-ken&y/objects/Purchase_Order__c.object
<CustomObject>
    <customHelpPage>HelpPurchaseOrders</customHelpPage>
    <description>Purchase header information</description>
    <fields>
        <fullName>Acknowledge_Via__c</fullName>
        <description>Preferred delivery method for PO and related changes</description>
        <inlineHelpText>Preferred method of acknowledging the PO and communicating changes.</inlineHelpText>
        <label>Acknowledge Via</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Regular Mail</fullName>
                </value>
                <value>
                    <fullName>FAX</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Chatter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Amount_Tolerance__c</fullName>
        <description>the total amount of delta between a Supplier Invoice line compared to its related PO line</description>
        <label>Amount Tolerance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>POs must be approved by user with appropriate authorization limit</description>
        <inlineHelpText>The acceptable difference, expressed as an amount, between the sales order and the related purchase order. If you choose not to enter a tolerance amount, Kenandy assumes zero tolerance.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Pending Authorization</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Autonumber__c</fullName>
        <displayFormat>{0000000000}</displayFormat>
        <label>Autonumber</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Bill_to_City__c</fullName>
        <description>City where Purchase Order should be billed to.  Defaults from Company - Account - Billing City.</description>
        <label>Bill-to City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Country__c</fullName>
        <description>Country where Purchase Order should be billed to.  Defaults from Company - Account - Billing Country.</description>
        <label>Bill-to Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_State__c</fullName>
        <description>State where Purchase Order should be billed to.  Defaults from Company - Account - Billing State/Province.</description>
        <label>Bill-to State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_to_Street__c</fullName>
        <description>Street where Purchase Order should be billed to.  Defaults from Company - Account - Billing Street.</description>
        <label>Bill-to Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bill_to_Zip_Code__c</fullName>
        <description>ZIP Code where Purchase Order should be billed to.  Defaults from Company - Account - Billing ZIP/Postal Code.</description>
        <label>Bill-to Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Buyer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Buyer or planner responsible for this PO</description>
        <label>Buyer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Purchase_Orders_Buyer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled_Purchase_Order_Lines__c</fullName>
        <description>This field will have the number of cancelled purchase order lines</description>
        <label>Cancelled Purchase Order Lines</label>
        <summaryFilterItems>
            <field>Purchase_Order_Line__c.Status__c</field>
            <operation>equals</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Company_Identifier__c</fullName>
        <description>Unique identifier to specify this company for data integrations</description>
        <label>Company Identifier</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Logistics or Financial company that this PO will be owned by</description>
        <label>Company</label>
        <referenceTo>Company__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to currency</description>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Purchase Order Currency</relationshipLabel>
        <relationshipName>Purchase_Order_Currency</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date_Closed__c</fullName>
        <description>Date PO was closed or cancelled</description>
        <label>Date Closed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliver_To_City__c</fullName>
        <label>Deliver To City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_To_Country__c</fullName>
        <label>Deliver To Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_To_State__c</fullName>
        <label>Deliver To State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_To_Street__c</fullName>
        <label>Deliver To Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Deliver_To_Zip_Code__c</fullName>
        <label>Deliver To Zip Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deliver_to_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deliver to Address</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliver_to_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Ship to customer info from the Drop Ship Requisition will be saved to this field</description>
        <label>Deliver to Customer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Customer__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Ship To</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Deliver_to__c</fullName>
        <description>Name of the person who should receive the order if different from usual channels</description>
        <label>Deliver-to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Facility__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Delivery facility is defined on the Company page. You can change the default value on the PO header. If you update the facility at the line level, the delivery location  changes to match the Default Purchasing Delivery Location for the specified facility.</inlineHelpText>
        <label>Delivery Facility</label>
        <referenceTo>Facility__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Delivery_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Location where orders of type Shipment should send the inventory</description>
        <inlineHelpText>Delivery location is defined on the Facility page. You can change the default value on the PO header if you choose a location within the specified facility. At the line level, the delivery location is determined by the location specified in the PO header.</inlineHelpText>
        <label>Delivery Location</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Location doesn&apos;t belong to the Facility</errorMessage>
            <filterItems>
                <field>Location__c.Facility__c</field>
                <operation>equals</operation>
                <valueField>$Source.Delivery_Facility__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Edited_By__c</fullName>
        <label>Edited By</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Edited_Time__c</fullName>
        <label>Edited Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExtId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FOB_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used in DM enterprise</description>
        <label>FOB Term</label>
        <referenceTo>FOB_Terms__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Historical__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Historical</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MRP_Plan__c</fullName>
        <description>This number, generated by MRP, references the demand that this order is fulfilling.</description>
        <label>MRP Plan</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Memo__c</fullName>
        <label>Memo</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Need_Date__c</fullName>
        <description>Need Date for this purchase order.</description>
        <label>Need Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Open_Purchase_Order_Lines__c</fullName>
        <label>Open Purchase Order Lines</label>
        <summaryFilterItems>
            <field>Purchase_Order_Line__c.Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </summaryFilterItems>
        <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Order_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>Date PO is placed with vendor</description>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Payment terms</description>
        <label>Payment Term</label>
        <referenceTo>Payment_Term__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_Purchase_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Original Order that created this Shipment type order</description>
        <label>Production Purchase Order</label>
        <referenceTo>Purchase_Order__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The purchase agreement that this PO was released against.</description>
        <label>Purchase Agreement</label>
        <referenceTo>Contract__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Purchase Order Number</label>
        <length>16</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Purchase_Order_Value__c</fullName>
        <description>Sum of all line values on PO Detail</description>
        <label>Purchase Order Value</label>
        <summarizedField>Purchase_Order_Line__c.Line_Value__c</summarizedField>
        <summaryFilterItems>
            <field>Purchase_Order_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quantity_Released__c</fullName>
        <description>formula field sumarizing the order quantity on all purchase order lines</description>
        <label>Quantity Released</label>
        <summarizedField>Purchase_Order_Line__c.Order_Quantity__c</summarizedField>
        <summaryFilterItems>
            <field>Purchase_Order_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Quantity_Tolerance_Over__c</fullName>
        <description>the % that the QTY can be different (over) between SI line and PO line receipt QTY</description>
        <label>Quantity Tolerance Over %</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Ready__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Process Automation considers records which have Ready == true</description>
        <label>Ready</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Remit_To_Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The supplier to whom the payment should be made.</description>
        <label>Remit To Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supplier__c.Type__c</field>
                <operation>equals</operation>
                <value>Remit-To</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Purchase Orders (Remit To Supplier)</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remit_to_City__c</fullName>
        <label>Remit-to City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_to_Country__c</fullName>
        <label>Remit-to Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_to_State__c</fullName>
        <label>Remit-to State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remit_to_Street__c</fullName>
        <label>Remit-to Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remit_to_Zip_Code__c</fullName>
        <label>Remit-to Zip Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rush_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check Box if Rush Order</description>
        <label>Rush Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Sales Order.</description>
        <label>Sales Order</label>
        <referenceTo>Sales_Order__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Tax_Amount__c</fullName>
        <label>Sales Tax Amount</label>
        <summarizedField>Purchase_Order_Line__c.Sales_Tax_Amount__c</summarizedField>
        <summaryFilterItems>
            <field>Purchase_Order_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Ship_Via__c</fullName>
        <description>Preferred shipment method</description>
        <label>Ship Via</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of the Purchase Order;  PO will be kept on file after beng closed until company runs a maintenance transaction to backup and purge closed and cancelled purchase orders</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Supplier</description>
        <label>Purchase From Supplier</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Supplier__c.Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <filterItems>
                <field>Supplier__c.Hold_Purchasing__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>Supplier__c.Type__c</field>
                <operation>equals</operation>
                <value>Purchasing</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Supplier__c</referenceTo>
        <relationshipLabel>Purchase Orders (Supplier)</relationshipLabel>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Number_Of_Lines__c</fullName>
        <description>Total Number of Purchase Order Lines</description>
        <label>Total Number Of Lines</label>
        <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Order_Weight__c</fullName>
        <description>Total weight of this order</description>
        <label>Total Order Weight</label>
        <summarizedField>Purchase_Order_Line__c.Total_Weight__c</summarizedField>
        <summaryFilterItems>
            <field>Purchase_Order_Line__c.Status__c</field>
            <operation>notEqual</operation>
            <value>Cancelled</value>
        </summaryFilterItems>
        <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date of the transaction, this could be populated from any source using a workflow</description>
        <inlineHelpText>Date of the transaction, this could be populated from any source using a workflow</inlineHelpText>
        <label>Transaction Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>--None--</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transportation_Mode__c</fullName>
        <description>The picklist values for this field need to be kept in sync with the picklist values for a field on the Contract_Line object of the same API name.</description>
        <label>Trans Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AIR</fullName>
                </value>
                <value>
                    <fullName>RAIL</fullName>
                </value>
                <value>
                    <fullName>SHIP</fullName>
                </value>
                <value>
                    <fullName>TRCK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>The PO type. &quot;Standard&quot; -&gt; lists goods or services you require. &quot;Production&quot; -&gt; establishes a contract with a co-manufacturer to produce goods. &quot;Shipment&quot; -&gt; lists goods ready to be picked up.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Production</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Shipment</fullName>
                </value>
                <value>
                    <fullName>Drop Ship</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit_Price_Tolerance_Over__c</fullName>
        <description>the % that the unit price can be different (over) between SI line and PO line</description>
        <label>Unit Price Tolerance Over %</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VAT_Amount__c</fullName>
        <label>VAT Amount</label>
        <summarizedField>Purchase_Order_Line__c.VAT_Amount__c</summarizedField>
        <summaryForeignKey>Purchase_Order_Line__c.Purchase_Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Weight_UOM__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Total Weight UOM</description>
        <label>Weight UOM</label>
        <referenceTo>UOM__c</referenceTo>
        <relationshipLabel>Purchase Orders (Weight UOM)</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>Open_Purchase_Orders</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Buyer__c</columns>
        <columns>Type__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Rush_Order__c</columns>
        <columns>Purchase_Order_Value__c</columns>
        <columns>Company__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>Open Purchase Orders</label>
    </listViews>
    <listViews>
        <fullName>PO_all</fullName>
        <columns>NAME</columns>
        <columns>Company__c</columns>
        <columns>Type__c</columns>
        <columns>Buyer__c</columns>
        <columns>Order_Date__c</columns>
        <columns>Status__c</columns>
        <columns>Rush_Order__c</columns>
        <columns>Purchase_Order_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Purchase Order</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_Edit_Purchase_Agreement</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISNEW()), ISCHANGED( Purchase_Agreement__c ) )</errorConditionFormula>
        <errorDisplayField>Purchase_Agreement__c</errorDisplayField>
        <errorMessage>Purchase Agreement cannot be updated on a Purchase Order</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cannot_Update_Address_Fields</fullName>
        <active>true</active>
        <description>Cannot update Address fields on a Drop Ship Purchase Order.</description>
        <errorConditionFormula>AND(NOT(ISNEW()), ISPICKVAL( Type__c , &apos;Drop Ship&apos;) ,  
 OR (ISCHANGED( Deliver_To_City__c ), 
     ISCHANGED( Deliver_To_Street__c ),
     ISCHANGED( Deliver_To_State__c ),
     ISCHANGED( Deliver_To_Country__c ),
     ISCHANGED( Deliver_To_Zip_Code__c ) 
    )
  )</errorConditionFormula>
        <errorMessage>Delivery Address Fields cannot be updated on a Drop Ship Purchase Order.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Check</fullName>
        <active>true</active>
        <description>If status is closed you cannot edit any fields</description>
        <errorConditionFormula>AND( 
NOT(ISPICKVAL(PRIORVALUE(Status__c), &apos;Open&apos;)),
NOT(ISCHANGED(Status__c)),
(ISCHANGED(Approval_Status__c)),
NOT(ISCHANGED(Open_Purchase_Order_Lines__c)),
NOT(ISCHANGED(Purchase_Order_Value__c)),
NOT(ISCHANGED(Quantity_Released__c)),
NOT(ISCHANGED(Total_Number_Of_Lines__c)),
NOT(ISCHANGED(Total_Order_Weight__c)))</errorConditionFormula>
        <errorMessage>Purchase Order is Not Open. No Changes are allowed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Company_must_not_change</fullName>
        <active>true</active>
        <description>after creating a PO for a given company, do not allow the PO to change to another company</description>
        <errorConditionFormula>ISCHANGED(Company__c)</errorConditionFormula>
        <errorMessage>Once created for a Company, the PO must not change Company field.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Need_date_should_be_greater_than_today</fullName>
        <active>true</active>
        <description>Need date should be greater than or equal to today.</description>
        <errorConditionFormula>Not(IsBlank(Need_Date__c)) &amp;&amp;
IsChanged(Need_Date__c) &amp;&amp;
Need_Date__c &lt; today()</errorConditionFormula>
        <errorDisplayField>Need_Date__c</errorDisplayField>
        <errorMessage>Need date should be greater than or equal to today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Negative_Tolerance</fullName>
        <active>true</active>
        <errorConditionFormula>IF( 
   OR( Quantity_Tolerance_Over__c &lt; 0,
       Unit_Price_Tolerance_Over__c &lt; 0,
       Amount_Tolerance__c &lt; 0), 
TRUE, FALSE)</errorConditionFormula>
        <errorMessage>All tolerance percentages and amounts must be positive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Void_and_Finalized</fullName>
        <active>false</active>
        <errorConditionFormula>FALSE</errorConditionFormula>
        <errorMessage>This Receiving Document must be Finalized in order to Void</errorMessage>
    </validationRules>
</CustomObject>